fixed-color-contrast-footer

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -65,7 +65,7 @@ footer {
     text-align: center;
     padding: 1rem;
     background-color: rgb(108, 197, 153);
-    color: #110deb;
+    color: #000000;
 }
 
 #banner {
